z-index fix for menu

--- a/src/index.css
+++ b/src/index.css
@@ -22,18 +22,9 @@ html{
     top: 0;
     left: 0;
     background: white;
-    z-index: 10;
+    z-index: 40;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-}
-
-.hide-scrollbar::-webkit-scrollbar {
-    display: none;
-}
-
-.hide-scrollbar {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
 }
